# gracie

./: .gitignore  CMakeLists.txt
include/: bitboard.hpp  color.hpp  piece.hpp  starting_positions.hpp
include/move_gen/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  pawn_move_gen.hpp  queen.hpp  rook.hpp
include/movegen/: bishop.hpp  helpers.hpp  knight.hpp  move_making.hpp  pawn.hpp  queen.hpp  rook.hpp
include/types/: color.hpp  move.hpp  piece.hpp  position.hpp
include/utils/: bithacks.hpp  constants.hpp  masks.hpp  move.hpp  shifts.hpp
src/: bitboard.cpp  main.cpp  shifts.cpp
src/move_gen/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  pawn_move_gen.cpp  queen.cpp  rook.cpp
src/movegen/: bishop.cpp  helpers.cpp  king.cpp  knight.cpp  move_making.cpp  pawn.cpp  queen.cpp  rook.cpp
tests/: move_gen_tests.cpp
